# stratagem

./: CMakeLists.txt  CenterText.cpp  CenterText.h  Level.cpp  Level.h  README.md  Score.cpp  Score.h  enemy.cpp  enemy.h  global.cpp  global.h  main.cpp
cmake_modules/: FindSFML.cmake
